codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_mixed.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: terminal_title_popup_snapshot(&mut chat)
---
  Configure Terminal Title
  Select which items to display in the terminal title.

  Type to search
  >
› [x] project-name   Project name (falls back to current directory name)
  [x] thread-title   Current thread title, or thread identifier when unnamed
  [x] task-progress  Latest task progress from update_plan (omitted until available)
  [ ] app-name       Hepta app name
  [ ] current-dir    Current working directory
  [ ] activity       Spinner while working, action-required message while blocked.
  [ ] run-state      Compact session run-state text (Ready, Working, Thinking)
  [ ] git-branch     Current Git branch (omitted when unavailable)

  project | Mixed preview thread | Tasks 0/0
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to close
